--- a/src/App.scss
+++ b/src/App.scss
@@ -59,7 +59,7 @@ $main-font: 'Montserrat', sans-serif;
      }
   }
   #cart {
-    @include position(30px, 40px, '', '');
+    @include position(30px, 20px, '', '');
     font-size: 30px;
     color: $text-color;
     padding-left: 40px;
@@ -119,7 +119,7 @@ $main-font: 'Montserrat', sans-serif;
 }
 
 .fa-bars, .fa-times{
-  @include position(30px,'','', 50px );
+  @include position(30px,'','', 20px );
   display: block;
   font-size: 30px;
 }
@@ -151,6 +151,13 @@ $main-font: 'Montserrat', sans-serif;
 #image1 {
   background-image: url('./images/plaid.jpg')
 }
+
+@media screen and (max-width: 500px) {
+  .parallax {
+    background-attachment: scroll;
+  }
+}
+
 /* HEADER STYLES ENDS */
 /* SHOP STYLES BEGIN */
 .shop {
@@ -664,14 +671,17 @@ footer {
         padding: 10px;
         outline: none;
         font-size: 16px;
+        border-radius: 0;
+        border: 1px solid $text-color;
       }
 
-      input[type='submit'] {
+      button[type='submit'] {
         background: $brand-color;
         padding: 15px;
         font-size: 16px;
         color: $white;
         border: none;
+        outline: none;
       }
     }
   }
