--- a/src/App.scss
+++ b/src/App.scss
@@ -146,7 +146,7 @@ $main-font: 'Montserrat', sans-serif;
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
-  transition: all 1s ease;
+  transition: all .4s ease;
 }
 
 @media screen and (max-width: 500px) {
