--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,8 @@ $main-font: 'Montserrat', sans-serif;
     line-height: 100%;
     margin: auto;
     @include flex(flex-end, center, '');
-    padding:40px;
+    padding:30px;
+    background: #fff;
     position: relative;
 
   ul {
@@ -59,7 +60,7 @@ $main-font: 'Montserrat', sans-serif;
      }
   }
   #cart {
-    @include position(30px, 20px, '', '');
+    @include position(20px, 20px, '', '');
     font-size: 30px;
     color: $text-color;
     padding-left: 40px;
@@ -72,7 +73,7 @@ $main-font: 'Montserrat', sans-serif;
 }
 
 #logo img {
-  width: 80px;
+  width: 70px;
   @include position(50%, '', '', 30px);
   transform: translateY(-50%);
 }
@@ -85,6 +86,11 @@ $main-font: 'Montserrat', sans-serif;
 }
 
 @media screen and (max-width: 1100px) {
+
+  .nav {
+    padding: 35px;
+  }
+
   .mobile_nav {
     flex-direction: column;
 
@@ -119,7 +125,7 @@ $main-font: 'Montserrat', sans-serif;
 }
 
 .fa-bars, .fa-times{
-  @include position(30px,'','', 20px );
+  @include position(20px,'','', 20px );
   display: block;
   font-size: 30px;
 }
@@ -198,10 +204,6 @@ $main-font: 'Montserrat', sans-serif;
         object-fit: cover;
         transform: scale(1.4);
         transition: all .5s ease;
-
-        &:hover {
-          transform: scale(1.6) rotate(5deg);
-        }
       }
     }
 
@@ -261,6 +263,7 @@ $main-font: 'Montserrat', sans-serif;
   .scrolling_wrapper {
     display: grid;
     grid-template-columns: repeat(7, 320px);
+    -webkit-overflow-scrolling: touch;
     overflow-x: scroll;
     overflow-y: hidden;
     scrollbar-width: none;
@@ -398,51 +401,38 @@ $main-font: 'Montserrat', sans-serif;
   width: 100%;
   object-fit: cover;
   opacity: .9;
-  transition: all .5s ease-in;
+  transition: all .5s ease-in-out;
+}
+
+.bannerItems .banner1,
+.banner2,
+.banner3,
+.banner4 {
+  &:hover {
+    img {
+      transform: scale(1.2) rotate(5deg);
+    }
+  }
 }
 
 .bannerItems .banner1 {
   grid-column: 1/2;
   grid-row: 1/3;
-
-  &:hover {
-    img {
-    transform: scale(1.2) rotate(5deg);
-    }
-  }
 }
 
 .bannerItems .banner2 {
   grid-column: 2/3;
   grid-row: 1/2;
-
-  &:hover {
-    img {
-    transform: scale(1.2) rotate(5deg);
-    }
-  }
 }
 
 .bannerItems .banner3 {
   grid-column: 1/2;
   grid-row: 3/4;
-
-  &:hover {
-    img {
-    transform: scale(1.2) rotate(5deg);
-    }
-  }
 }
 
 .bannerItems .banner4 {
   grid-column: 2/3;
   grid-row: 2/4;
-
-  &:hover {
-    img {
-    transform: scale(1.2) rotate(5deg);
-    }
-  }
 }
 
 @media screen and (max-width: 650px) {
@@ -553,7 +543,7 @@ $main-font: 'Montserrat', sans-serif;
     button {
       width: 30px;
       height: 30px;
-      background: $brand-color;
+      background: $primary-color;
       color: $white;
       font-size: 15px;
       border: none;
@@ -563,7 +553,7 @@ $main-font: 'Montserrat', sans-serif;
     }
 
     button:nth-of-type(2) {
-      background: $primary-color;
+      background: $brand-color;
     }
   }
   .control_btns {
