--- a/src/App.scss
+++ b/src/App.scss
@@ -101,7 +101,7 @@ $main-font: 'Montserrat', sans-serif;
 
     ul {
       @include flex('','', column);
-      @include position(80px, '' , '' , 0 );
+      @include position(70px, '' , '' , 0 );
       background: $white;
       padding: 50px;
       width: 50%;
@@ -147,7 +147,7 @@ $main-font: 'Montserrat', sans-serif;
 /* NAVIGATION STYLES END */
 /* HEADER STYLES BEGING */
 .parallax {
-  min-height: 65vh;
+  min-height: 68vh;
   background-attachment: fixed;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -218,6 +218,11 @@ $main-font: 'Montserrat', sans-serif;
         font-size: 18px;
         padding: 30px;
         z-index: 30;
+        cursor: pointer;
+      }
+
+      &:hover img {
+        transform: scale(1.5);
       }
     }
   }
@@ -262,11 +267,13 @@ $main-font: 'Montserrat', sans-serif;
 
   .scrolling_wrapper {
     display: grid;
-    grid-template-columns: repeat(7, 320px);
+    grid-template-columns: repeat(7, 280px);
     -webkit-overflow-scrolling: touch;
     overflow-x: scroll;
+    gap: 20px;
     overflow-y: hidden;
     scrollbar-width: none;
+    padding: 20px;
 
     &::-webkit-scrollbar {
       display: none;
@@ -274,10 +281,8 @@ $main-font: 'Montserrat', sans-serif;
 
   .card {
     position: relative;
-    margin: 20px;
     background: #f6f6f6;
-    padding: 10px;
-    text-align: center;
+    height: 400px;
 
     &:last-of-type {
       position: relative;
@@ -292,49 +297,52 @@ $main-font: 'Montserrat', sans-serif;
 
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
-    &:hover .overlay {
-      opacity: .98;
-      transform: translateY(0);
-   }
-
-   .info {
-     height: 100px;
-   }
-
+    &-upper {
+      position: relative;
+      height: 65%;
+      overflow: hidden;
+    }
+    
+    &-upper button {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      border: none;
+      height: 55px;
+      background: rgba(19, 19, 19, .9);
+      color: #fff;
+      transform: translateY(80px);
+      transition: all .5s ease;
+      font-size: 19px;
+      cursor: pointer;
+      outline: none;
+    }
+    
+    &-lower {
+      height: 35%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: column;
+    }
+    
     h2 {
+      font-size: 16px;
       font-weight: 400;
-      padding: 20px 0;
-      font-size: 18px; 
     }
     
     span {
       font-size: 15px;
+      font-weight: 400;
     }
-  }
-
-  .overlay {
-    @include position('',0,110px,0);
-    z-index: 20;
-    background:rgba(19, 19, 19, .9);
-    text-align: center;
-    transition: all .5s ease;
-    overflow: hidden;
-    opacity: 0;
-    transform: translateY(30px);
-
-    button {
-      border: none;
-      padding: 25px 20px;
-      text-transform: uppercase;
-      font-size: 16px;
-      transition: all .5s ease;
-      outline: none;
-      width: 100%;
-      background: transparent;
-      color: $white;
-      cursor: pointer;
+    
+    &:hover .card-upper button {
+        transform: translateY(0px);
     }
   }
 }
@@ -461,7 +469,7 @@ $main-font: 'Montserrat', sans-serif;
   min-height: 80vh;
   width: 400px;
   padding: 50px;
-  box-shadow: 0 6px 12px rgba(19, 19, 19, .5);
+  box-shadow: 0 1px 9px rgba(19, 19, 19, .2);
   background: $white;
   z-index: 100;
 
@@ -669,6 +677,7 @@ footer {
         color: $white;
         border: none;
         outline: none;
+        cursor: pointer;
       }
     }
   }
