added a max-width to App component

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,11 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+.App {
+  max-width: 1800px;
+  margin: auto;
+}
+
 $header: 40px;
 $primary-color: #6b031a;
 $text-color: #191919;
